--- a/composer.json
+++ b/composer.json
@@ -1,20 +1,20 @@
   
 {
-    "name": "huaweichenai/web-socket",
+    "name": "ss668888\socket",
     "description": "This is a service class that implements websocket",
     "keywords": ["webSocket","php", "server"],
     "license": "BSD-3-Clause",
     "authors": [
         {
-            "name": "huaweichenai",
-            "email": "243681093@qq.com",
-            "homepage": "https://www.wj0511.com/"
+            "name": "ss668888",
+            "email": "8730192@qq.com",
+            "homepage": "https://www.lwpro.com/"
         }
     ],
     "require": {},
     "autoload": {
         "psr-4": {
-            "huaweichenai\\webSocket\\": "src"
+            "ss668888\\socket\\": "src"
         }
     }
 }
